--- a/Settings/pom.xml
+++ b/Settings/pom.xml
@@ -22,6 +22,24 @@
 	<dependencies>
 	
 	
+<!-- jackson-databind -->
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+	
+	
+<!-- commons-fileupload -->
+
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.3</version>
+		</dependency>
+	
+	
 <!-- mysql-connector-java -->
 
 		<dependency>
